--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                    
                 </li>         
                 <li class="nav-item">
-                    <a class="nav-link " data-value="contact" href="#contact-form">Contact</a> </li>
+                    <a class="nav-link " data-value="contact" href="#contact-form">Contact</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " data-value="Hobby" href="https://store.cdbaby.com/cd/ministryofzoe">Hobby</a> 
+                </li>
             </ul>
         </div>
     </nav>
