--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link " data-value="portfolio" href="#project">Project</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link " data-value="portfolio" href="images\CraigResume.pdf" target="_blank">Resume</a>
+                    <a class="nav-link " data-value="portfolio" href="images\Craig DwyerResume (2).pdf" target="_blank">Resume</a>
                    
                 </li>         
                 <li class="nav-item">
