--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                     <a class="nav-link " data-value="contact" href="#contact-form">Contact</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " data-value="Hobby" href="https://store.cdbaby.com/cd/ministryofzoe">Hobby</a> 
+                <li class="nav-item">
+                    <a class="nav-link " data-value="Gardening" href="https://bartramsgarden.org/sankofa/">Gardening</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " data-value="BuildingHomes" href="https://www.redfin.com/city/15502/PA/Philadelphia/homes-for-sale?utm_campaign=1010863&utm_content=76622234940481&utm_medium=ppc&utm_source=bing&utm_term=kwd-76622244473860:aud-805832712:loc-71262">BuildingHomes</a> 
                 </li>
             </ul>
         </div>
